force-app/main/default/objects/CPR_Certification__c/CPR_Certification__c.object-meta.xml
<CustomObject>
    <description>This object captures the history of CPR certification for a provider</description>
    <label>CPR Certification</label>
    <nameField>
        <displayFormat>CPR-{0000}</displayFormat>
        <label>CPR Certification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPR Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>