force-app/main/default/objects/CPR_Certification__c/fields/CPR_Days_to_Expire__c.field-meta.xml
<CustomField>
    <fullName>CPR_Days_to_Expire__c</fullName>
    <formula>Enrollment__r.Days_to_Expire__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPR Days to Expire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>