force-app/main/default/objects/CPR_Certification__c/fields/CPR_Notes__c.field-meta.xml
<CustomField>
    <fullName>CPR_Notes__c</fullName>
    <label>CPR Notes</label>
    <type>TextArea</type>
</CustomField>