force-app/main/default/objects/CPR_Certification__c/fields/CPR_Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>CPR_Valid_Till__c</fullName>
    <formula>Enrollment__r.CPR_Valid_Till__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPR Valid Till</label>
    <type>Date</type>
</CustomField>