force-app/main/default/objects/CPR_Certification__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment</label>
    <referenceTo>SFDC_Enrollment__c</referenceTo>
    <relationshipLabel>CPR Certifications</relationshipLabel>
    <relationshipName>CPR_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>