force-app/main/default/objects/CPR_Certification__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CPR Certifications</relationshipLabel>
    <relationshipName>CPR_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>